# teritori-dapp

./: .depcheckrc  .editorconfig  .env  .env.example  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .gnoversion  .golangci.yml  .graphqlconfig  App.native.tsx  App.tsx  CONTRIBUTING.md  Cargo.toml  Makefile  P2E_ETH.md  README.md  Root.tsx  app-selector.js  app.config.js  app.config.ts  app.json  babel.config.js  backup.tar  berty-backup-0.tar  buf.gen.yaml  buf.yaml  build_release.sh  codegen.ts  cypress.config.ts  declarations.d.ts  docker-compose.yml  eas.json  electron-webpack.js  envoy.yaml  fauna_db.txt  fauna_db_original.txt  go.mod  go.sum  (+25 more)
.expo-shared/: assets.json
.github/workflows/: buf-lint.yml  cairo.yml  desktop-build.yml  desktop-mac-amd64.yml  desktop-mac-arm.yml  e2e.yml  gen.yml  gno-lint.yml  gno-test.yml  go.yml  js.yml  lint-pr-title.yml  mobile-build-android.yml  mobile-build-ios.yml  mobile-build.yml  preview.yml  rust.yml  update.yml
.yarn/patches/: @axelar-network-axelarjs-sdk-npm-0.13.9-617166d9cd.patch  @gnolang-tm2-js-client-npm-1.0.1-9e54bafbb3.patch  @gnolang-tm2-js-client-npm-1.2.1-1ea3bc3862.patch  chain-registry-npm-1.20.0-e290300d1b.patch  graphql-request-npm-5.2.0-31dd65ab47.patch  multiformats-npm-12.1.3-dbaa26037a.patch
android/: .gitignore  build.gradle  gradle.properties  settings.gradle
android/app/: BUCK  build.gradle
apps/gno-dapp/: App.tsx  app.config.js  netlify.toml
apps/gnotribe/: App.tsx  app.config.js  netlify.toml
apps/rwa-app/: App.tsx  app.json  metro.config.js  package.json  tsconfig.json  webpack.config.js
apps/teritori/: App.tsx  (+2 more)
assets/: package.json
cache/: duplicates-04a58a332c7391524e03f89d1f2ef928.1.json  duplicates-0c611f1a311a0c8b516a97624f1dc826.1.json  duplicates-4704826f5185ee4c12b07ceb48557479.1.json  duplicates-5ef890cedb27a21f4175619ef8d54d16.1.json  duplicates-68f988be4eff9e19e597b4a7cdc29e48.1.json  duplicates-6929c2226f770ed5a01b2dbe4aae93d2.1.json  duplicates-9856d65766e2af8f3decde5e8763e19f.1.json  duplicates-9a78ca8081edd5452a9083d8af90bcfd.1.json  duplicates-d71491fd4d66c0e2e50d1601d5d00c4e.1.json  duplicates-d754a1b48bff4a25956d94e81c086cf4.1.json
cairo/: account.json  deploy_hellostark.md  deploy_todolist.md  katana.md  patch.md  setup.md
cmd/: Frameworks.xcconfig  add_frameworks.rb  bind.txt  build-ios.sh  electron-build.sh  fix-app-build.js  weshd.sh
cosmwasm-contracts/cw721-membership/: Cargo.toml  Makefile  config.json
cosmwasm-contracts/cw721-membership/schema/: cw721-membership.json  cw721_membership.json
cosmwasm-contracts/cw721-membership/schema/raw/: execute.json  instantiate.json  query.json  response_to_channel.json  response_to_channel_funds.json  response_to_channels_by_owner.json  response_to_config.json
cosmwasm-contracts/cw721-membership/src/: contract.rs  error.rs  multitest.rs
cosmwasm-contracts/marketing/: Cargo.toml
cosmwasm-contracts/marketing/src/: contract.rs  lib.rs
cosmwasm-contracts/nft-launchpad/: Cargo.toml
cosmwasm-contracts/nft-launchpad/.cargo/: config
cosmwasm-contracts/nft-launchpad/src/: contract.rs  error.rs  exec.rs  lib.rs  msg.rs  multitest.rs  query.rs  responses.rs  state.rs  tests.rs  tr721.rs
cosmwasm-contracts/nft-launchpad/src_bk/: msg.rs  state.rs
cosmwasm-contracts/nft-tr721/: Cargo.toml
cosmwasm-contracts/nft-tr721/src/: contract.rs  contract_bk.rs  error.rs  lib.rs  multitest.rs  tests.rs  tests_bk.rs  utils.rs
electron/: go.mod  go.sum  icon.icns  main.js  package.json  preload.js  prod.go  splash.html  webpack.config.js
gno/: Makefile
gno_github_agent/: .dockerignore  .env  Dockerfile  Makefile  go.mod  go.sum  main.go
ios/: Podfile  Podfile.properties.json
kubernetes/: README.md  backend-deploy.yaml  backend-ingress.yaml  docker-publish.sh  index-pv.yaml  indexer-deploy.yaml
patches/: @cosmjs+cosmwasm-stargate+0.28.13.patch  @gnolang+tm2-js-client+1.0.1.patch  @nandorojo+anchor+0.3.1.patch  multiformats+13.3.1.patch  starknet+6.21.0.patch
public/: index.html
random-poster/: Makefile  package.json  random.js
rust/: Cargo.toml
rust/contracts/nft-launchpad/: Cargo.toml  Makefile
rust/contracts/nft-launchpad/.cargo/: config
rust/contracts/nft-launchpad/schema/: nft-launchpad.json
rust/contracts/nft-launchpad/src/: contract.rs  lib.rs  msg.rs  multitest.rs  tests.rs
rust/contracts/nft-marketplace/: Cargo.toml
rust/contracts/nft-marketplace/schema/: execute_msg.json
rust/cw-contracts/cw-atomic-swap/: Cargo.toml
rust/cw-contracts/cw-atomic-swap/schema/: cw-atomic-swap.json
rust/cw-contracts/cw-atomic-swap/schema/raw/: execute.json  query.json  response_to_swaps.json
rust/cw-contracts/cw-atomic-swap/src/: contract.rs  error.rs  multitest.rs
rust/cw-contracts/nft-launchpad/: Cargo.toml  Makefile  config-mainnet.json  config.json  deploy.ts  nft_launchpad.wasm
rust/cw-contracts/nft-launchpad/schema/: nft-launchpad.json
rust/cw-contracts/nft-launchpad/schema/raw/: execute.json  instantiate.json  query.json  response_to_get_collection_by_addr.json  response_to_get_collection_by_id.json  response_to_get_collections_by_creator.json  response_to_get_config.json
rust/cw-contracts/nft-launchpad/src/: contract.rs  error.rs  lib.rs  multitest.rs  responses.rs  test_helpers.rs  utils.rs
rust/cw-contracts/rakki/: Cargo.toml
rust/cw-contracts/rakki/schema/: rakki.json
rust/cw-contracts/rakki/schema/raw/: execute.json  instantiate.json  query.json
rust/cw-contracts/rakki/src/: contract.rs  tests.rs
rust/nft-launchpad/: Cargo.toml
rust/nft-launchpad/schema/raw/: query.json  response_to_get_collection_by_id.json
rust/nft-launchpad/src/: contract.rs  multitest.rs
substreams-ethereum/: .env  .testnet.env  Cargo.toml  Makefile
substreams-ethereum/abis/: squad_staking.json
substreams-ethereum/proto/: txns.proto
substreams-ethereum/src/: lib.rs  util.rs  whitelists.rs
substreams-ethereum/src/pb/: teritori.substreams.ethereum.txns.v1.rs
teritori-launchpad/: go.mod  go.sum
web/: index.html
weshd/: expo-module.config.json  go.mod  go.sum  index.ts  package.json
(+792 files in other folders)
