[workspace]
members = ["rust/cw-contracts/*"]
resolver = "2"

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false

[workspace.dependencies]
cw-storage-plus = "1.2.0"
cosmwasm-schema = "1.5.3"
cw-utils = "1.0.3"
schemars = "0.8.16"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.57"
sylvia = "0.9.3"
prost = "0.12.3"
apipb = { version = "0.1.0", path = "rust/apipb" }
nft-tr721 = { version = "0.2.0", path = "rust/cw-contracts/nft-tr721" }
nft-launchpad = { version = "0.2.0", path = "rust/cw-contracts/nft-launchpad" }