[package]
name = "substreams-ethereum"
version = "0.0.1"
description = "Teritori Substreams for Ethereum"
edition = "2021"
repository = "https://github.com"
license = "MIT"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
ethabi = "18"
hex = "0.4.3"
hex-literal = "0.3.4"
load-dotenv = "0.1.2"
prost = "0.11"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
# Use latest from https://crates.io/crates/substreams
substreams = "0.5.1"
substreams-database-change = "1.0.0"
# Use latest from https://crates.io/crates/substreams-ethereum
substreams-ethereum = "0.8.0"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.8.0"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
