[package]
name = "cw721-membership"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.3.1", features = ["staking"] }
sylvia = "0.7.0"
schemars = "0.8.12"
cosmwasm-schema = "1.3.1"
serde = "1.0.180"
serde_json = "1.0"
cw-storage-plus = "1.1.0"
thiserror = "1.0.44"
cw721 = "0.18.0"
cw721-metadata-onchain = { version = "0.15.0", features = ["library"] }
cw2981-royalties = "0.18.0"

[dev-dependencies]
sylvia = { version = "0.7.0", features = ["mt"] }
