[package]
name = "marketing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
schemars = "0.8.12"
cosmwasm-std = "1.3.1"
cosmwasm-schema = "1.3.1"
cw-storage-plus = "1.1.0"
serde = "1.0.180"
sylvia = "0.7.0"
thiserror = "1.0.44"
base64 = "0.21.7"
