[package]
name = "nft-tr721"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.5.3", features = ["cosmwasm_1_2"] }
cw2981-royalties = { version = "0.18.0", features = ["library"] }
cw721 = "0.18.0"
cw721-base = { version = "0.18.0", features = ["library"] }
rs_merkle = { version = "1.4.2", default-features = false }

cw-storage-plus = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-utils = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
sylvia = { workspace = true }

[dev-dependencies]
cw-multi-test = "0.20.0"
sylvia = { version = "0.9.3", features = ["mt"] }
