[package]
name = "nft-launchpad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.5.3"
cosmwasm-std = { version = "1.5.3", features = ["cosmwasm_1_2"] }
cw-storage-plus = "1.2.0"
cw-utils = "1.0.3"
cw2981-royalties = { version = "0.18.0", features = ["library"] }
cw721 = "0.18.0"
cw721-base = { version = "0.18.0", features = ["library"] }
schemars = "0.8.16"
serde = { version = "1.0.197", features = ["derive"] }
sylvia = "0.9.3"
thiserror = "1.0.57"

[dev-dependencies]
sylvia = { version = "0.9.3", features = ["mt"] }
