[package]
name = "nft-launchpad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-schema = "1.5.3"
cosmwasm-std = "1.5.3"
cw-storage-plus = "1.2.0"
schemars = "0.8.16"
thiserror = "1.0.57"

[dev-dependencies]
cw-multi-test = "0.20.0"
