[package]
name = "nft-marketplace"
version = "0.1.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo testing --lib
# for more explicit tests, cargo testing --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw721 = { version = "0.13.2" }
cw721-base = { version = "0.15.0", features = ["library"] }
cosmwasm-std = { version = "1.0.0" }
cw-storage-plus = { version = "0.13.4" }
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
cw2981-royalties = "0.18.0"

[dev-dependencies]
cosmwasm-schema = { version = "1.1.0" }
