[package]
name = "rakki"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.5.0", features = ["staking"] }
sylvia = "0.9.3"
schemars = "0.8.16"
cosmwasm-schema = "1.5.0"
serde = "1.0.193"
cw-storage-plus = "1.2.0"
sha3 = "0.10.8"
thiserror = "1.0.52"
getrandom = { version = "0.2.11", features = ["js"] }

[dev-dependencies]
sylvia = { version = "0.9.3", features = ["mt"] }
